--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <title>URL Shortner</title>
 </head>
 <body>
-<p>Working</p>
+<h4>List all URLs</h4>
+<form action="/shortURL" method="get">
+    <input type="submit" value="Submit">
+</form>
+<hr>
 </body>
 </html>
